# webpage_summarizer

./: README.md  main.ipynb  main.py  pyproject.toml
methods/: utils.py
