[project]
name = "webpage-summarizer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "dotenv>=0.9.9",
    "ipykernel>=7.2.0",
    "ipython>=9.11.0",
    "openai>=2.26.0",
    "requests>=2.32.5",
    "trafilatura>=2.0.0",
]
